fix: more various dark mode fixes (#5850)
- fixed active nav item colour to be scaled on theme colour when nav is collapsed
- fixed internal border colours in node overview card to match other border colours
- actually call function to set initial dark mode state instead of passing to state directly
- deleted random empty table header in KVM ram resources card
- fixed background colour of read-only text inputs (thanks @tobiasdemendonca!)
- fixed background colour of boot architectures table in subnet boot arch form
- changed secondary row colour to use muted text css variable for better contrast in dark mode
- use vanilla variable for link colour for visited links to prevent colour change
- modified `u-text--light` to use muted text vanilla colour variable
- upgraded maas-react-components to 2.0.2

--- a/src/scss/_patterns_double-row.scss
+++ b/src/scss/_patterns_double-row.scss
@@ -30,7 +30,7 @@
 
   .p-double-row__secondary-row {
     @extend %small-text;
-    color: $color-mid-dark;
+    color: var(--vf-color-text-muted);
     margin-bottom: 0;
   }
 
