--- a/src/scss/_patterns_forms.scss
+++ b/src/scss/_patterns_forms.scss
@@ -46,10 +46,9 @@
     }
   }
 
-  // Override Vanilla's default light text for readonly textareas and make text
-  // small. Used for displaying very long strings, e.g. certificates.
+  // Make text small for readonly text areas.
+  // Used for displaying very long strings, e.g. certificates.
   .p-textarea--readonly {
-    color: $color-dark !important;
     font-size: #{map.get($font-sizes, small)}rem;
   }
 
